[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Maps/midnight_zone.tres" type="TileSet" id=3]
[ext_resource path="res://Goal.tscn" type="PackedScene" id=4]
[ext_resource path="res://TileMap.tscn" type="PackedScene" id=5]
[ext_resource path="res://Teleports.tscn" type="PackedScene" id=6]
[ext_resource path="res://PointDisplay.tscn" type="PackedScene" id=7]
[ext_resource path="res://Main.gd" type="Script" id=8]
[ext_resource path="res://novem___.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 10 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[node name="Main" type="Node"]
script = ExtResource( 8 )

[node name="Player" parent="." instance=ExtResource( 1 )]
collision_layer = 7
collision_mask = 7
start_pos = Vector2( 1420, 500 )

[node name="Player2" parent="." instance=ExtResource( 1 )]
collision_layer = 7
collision_mask = 7
start_pos = Vector2( 500, 500 )
control_mode = "wasd_"

[node name="Ball" parent="." groups=["bodies"] instance=ExtResource( 2 )]
position = Vector2( 960, 400 )
contact_monitor = true

[node name="Goal" parent="." instance=ExtResource( 4 )]
position = Vector2( 16, 540 )
scale = Vector2( 4, 1.5 )
goal_for = "Player 2"

[node name="Goal2" parent="." instance=ExtResource( 4 )]
position = Vector2( 1904, 540 )
scale = Vector2( 4, 1.5 )
input_pickable = false
goal_for = "Player 1"

[node name="Teleports" parent="." instance=ExtResource( 6 )]

[node name="TileMap" parent="." instance=ExtResource( 5 )]
tile_set = ExtResource( 3 )
tile_data = PoolIntArray( 0, 1073741825, 0, 29, 1073741825, 0, 131072, -536870898, 0, 131101, -536870898, 0, 327693, 1073741837, 0, 720909, 1073741837, 0 )

[node name="PointDisplay" parent="." instance=ExtResource( 7 )]
position = Vector2( 32, 337 )
scale = Vector2( 2, 2 )

[node name="PointDisplay2" parent="." instance=ExtResource( 7 )]
position = Vector2( 1888, 337 )
scale = Vector2( 2, 2 )

[node name="WinMessage" type="RichTextLabel" parent="."]
margin_left = 600.0
margin_top = 400.0
margin_right = 2600.0
margin_bottom = 500.0
theme = SubResource( 5 )

[connection signal="body_entered" from="Goal" to="." method="_on_Goal_body_entered"]
[connection signal="body_entered" from="Goal2" to="." method="_on_Goal2_body_entered"]
[connection signal="teleport" from="Teleports" to="Ball" method="_on_Teleports_teleport"]
